tests/NormalTests/paczka2/big_fuzzy/62190654.err
Error in line 5: 4IEAWRka A275 17,0
Error in line 15: qoGy3 S330 31,9
Error in line 22: 4IEAWRka A227 14,9
Error in line 26: 4IEAWRka S330 18,1
Error in line 35: S330 S330 98,2
Error in line 28: 8amNWS0waE A275 14,7
Error in line 52: 8amNWS0waE A275 26,29
Error in line 64: S330 A227 23,1
Error in line 72: yUWG A227 51,3
Error in line 69: qoGy3 A227 59,1
Error in line 73: yUWG A275 51,8
Error in line 79: S330 A801 51,8
Error in line 99: S330 A801 90,28
Error in line 100: 4IEAWRka A275 64,3
Error in line 107: yUWG A227 45,68
Error in line 105: yG5FmUGYa A275 160,1
Error in line 92: aqoKKO A801 66,8
Error in line 116: yUWG A227 116,3
Error in line 125: 4IEAWRka Ad01 62,7
Error in line 112: yG5FmUGYa A801 105,8
Error in line 124: 4IEAWRka A801 37,1
Error in line 113: S330 A801 392,3
Error in line 133: S330 A275 85,3
Error in line 139: qoGy3 S330 81,0
Error in line 129: yG5FmUGYa S330 6,8
Error in line 142: qoGy3 A227 47,7
Error in line 145: yG5FmUGYa A801 89,2
Error in line 147: yG5FmUGYa S330 53,7
Error in line 146: qoGy3 S330 66,4
Error in line 135: S330 S330 50,4
Error in line 151: qoGy3 A275 39,1
Error in line 157: yUWG A227 92,7
Error in line 154: 4IEAWRka A801 77,7
Error in line 187: S330 A801 17,6
Error in line 211: S330 S330 3,80
Error in line 204: aqoKKO S330 122,5
Error in line 212: aqoKKO A801 35,6
Error in line 218: yG5FmUGYa A275 92,15
Error in line 213: aqoKKO S330 5,3
Error in line 223: yUWG A227 96,1
Error in line 219: yG5FmUGYa S330 55,8
Error in line 199: S330 S330 49,6
Error in line 225: yUWG S330 42,5
